--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@
 
 /*! ClearVision v7.0.1 by ClearVision Team */
 .info__2debe::after {
-    content: "KannaDiscord" " " "Modified theme of Discord, made by Kanna Kamui";
+    content: "KannaDiscord" " " "1.0.0";
     color: var(--text-muted);
     font-size: 12px;
     line-height: 1.3333333333;
@@ -34,7 +34,7 @@
 }
 
 .visual-refresh:not(.platform-osx) .leading_c38106::before {
-    content: "ClearVision";
+    content: "KannaDiscord";
     position: static;
     margin-left: 10px;
     font-size: 16px;
@@ -45,7 +45,7 @@
 }
 
 .visual-refresh:not(.platform-osx) .leading_c38106::after {
-    content: "7.0.1";
+    content: "1.0.0";
     position: static;
     margin-top: -5px;
     margin-left: 5px;
