--- a/main.css
+++ b/main.css
@@ -4190,8 +4190,8 @@ code {
     --font-display: var(--main-font);
     --font-code: var(--code-font);
     --focus-primary: var(--focus-color);
-    --main-color: #ffffff;
-    --hover-color: #1acaff;
+    --main-color: linear-gradient(90deg,rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 50%, rgba(237, 221, 83, 1) 100%);
+    --hover-color: #1e63b3;
     --success-color: #43b581;
     --warning-color: #fff;
     --danger-color: #982929;
